Add: axeron environment to ShizukuService